--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,14 @@
     tools:context="prabhukonchada.android.preferences.MainActivity">
 
     <TextView
+        android:background="@color/colorPrimary"
+        android:id="@+id/preference_value"
+        android:textSize="30sp"
+        android:padding="10dp"
+        android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Default Text !"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
