--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <CheckBoxPreference
+        android:key="check_box_selection"
+        android:title="CheckBox"
+        android:summaryOn="Checked"
+        android:summaryOff="UnChecked"
+        android:defaultValue="true"
+        />
+
 </PreferenceScreen>
