Added a text view to main activity to display list preference default value

--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -13,7 +13,7 @@
         android:title="List Preference"
         android:summary="radio buttons"
         android:key="color"
-        android:defaultValue="default_value"
+        android:defaultValue="@string/pref_entry_value_two"
         android:entries="@array/entry_list"
         android:entryValues="@array/entry_value_list"/>
 
